feat: fully functional sendMessage method and entities